# build-my-own-coding-agent

./: .gitignore  CLAUDE.md  LICENSE  README.md
v0/: README.md  agent.sh
v1/: README.md  agent.sh
v1r/: README.md  agent.py  agent.sh
v2/: README.md  agent.py
v2r/: README.md  agent.py  agent.sh
v3/: README.md  agent.py  agent.sh
v3r/: README.md
v4/: .gitignore  README.md  app.py  demo_delegation.py  test_safety.py  (+1 more)
v5/: .dockerignore  .gitignore  AGENTS.md  Dockerfile  PLAN.md  README.md  README_DOCKER.md  agent.py  agent.sh  docker-compose.yml  docker-run.sh  main.py  pyproject.toml
v5/conversation/: __init__.py
v5/core/: __init__.py  agent_core.py
v5/delegation/: events.py
v5/docs/: docker_troubleshooting.md  docker_usage.md  swebench_architecture.md
v5/examples/: show_dataset_examples.py  show_inference.py  show_json_examples.py  show_patch_generation.py  show_task_conversion.py
v5/interface/: __init__.py  cli.py  display.py
v5/llm/: client.py  my-coding-agents.code-workspace
v5/scripts/: download_repos.py
v5/swebench/: __init__.py  adapter.py  inference.py  loader.py  patch_generator.py
v5/tests/: __init__.py
v5/tools/: file_search_tools.py  registry.py  text_search_tools.py
v6/: CHANGELOG.md  DEMO-SCRIPT.md  README.md  pyproject.toml
v6/agent_team/: __init__.py  heartbeat.py  issue_manager.py  mailbox.py  shared_state.py  sop_parser.py
v6/agents/: __init__.py  base_agent.py  engineer_agent.py  pm_agent.py  strategist_agent.py  team_orchestrator.py
v6/conversation/: compressor.py
v6/execution/: tool_executor.py
v6/interface/: cli_v6.py
v6/monitoring/: __init__.py
v6/sops/: engineer.md  pm-new-feature.md  pm.md  strategist.md
v6/tests/: test_heartbeat.py  test_issue_manager.py  test_mailbox.py  test_orchestrator.py  test_shared_state.py  test_sop_parser.py
v6/tools/: __init__.py  conversation_tools.py  delegation_tools.py  mailbox_tools.py  pm_tools.py
(+24 files in other folders)
