[project]
name = "my-coding-agent-v5"
version = "0.5.0"
description = "AI coding agent with SWE-bench evaluation integration"
requires-python = ">=3.10"
dependencies = [
    "datasets>=4.4.2",
    "unidiff>=0.7.5",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
]
evaluation = [
    "docker",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["core", "tools", "conversation", "delegation", "execution", "interface", "llm", "monitoring"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "pytest-mock>=3.14.0",
]

[tool.pytest.ini_options]
markers = [
    "integration: marks tests as integration tests (requires network access)",
]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]