[project]
name = "my-coding-agent-v6"
version = "0.6.0"
description = "AI coding agent V6 - Agent Team: multi-agent product team framework"
requires-python = ">=3.11"
dependencies = [
    "gitpython>=3.1.40",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
]

[project.scripts]
agent-team = "interface.cli_v6:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = [
    "core", "tools", "conversation", "delegation", "execution",
    "interface", "llm", "monitoring", "agent_team", "agents"
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "pytest-mock>=3.14.0",
]

[tool.pytest.ini_options]
markers = [
    "integration: marks tests as integration tests (requires network access)",
]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
